[project]
name = "oeis-python"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "gmpy2>=2.2.1",
    "graphillion>=2.1",
    "ipython>=9.2.0",
    "matplotlib>=3.10.3",
    "numpy>=2.2.5",
    "openpyxl>=3.1.5",
    "pandas>=2.2.3",
    "pydantic>=2.11.4",
    "requests>=2.32.3",
    "sympy>=1.14.0",
]
