[project]
name = "oeis-python"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "binarytree>=6.5.1",
    "gmpy2>=2.2.1",
    "graphillion>=2.1",
    "ipython>=9.2.0",
    "labmath>=2.2.0",
    "levenshtein>=0.27.1",
    "matplotlib>=3.10.3",
    "msmath>=1.0.17",
    "multiset>=3.2.0",
    "networkx>=3.5",
    "num2words>=0.5.14",
    "numba>=0.61.2",
    "numpy>=2.2.5",
    "openpyxl>=3.1.5",
    "pandas>=2.2.3",
    "pydantic>=2.11.4",
    "pyroaring>=1.0.1",
    "requests>=2.32.3",
    "requests-cache>=1.2.1",
    "scipy>=1.15.3",
    "sha256bit>=0.1.0",
    "sympy>=1.14.0",
    "unidecode>=1.4.0",
]
